--- a/gym350hml/clases.html
+++ b/gym350hml/clases.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name=description" content="gimnasio 350,gimnasion top,todo tipo de zonas">
+    <meta name="description" content="gimnasio 350,gimnasion top,todo tipo de zonas">
     <meta name="keywords" content="gimnasio,ejercicio,maquinas 350">
     
     <!--bootsrap-->
