--- a/gym350hml/clases.html
+++ b/gym350hml/clases.html
@@ -18,7 +18,7 @@
 
     </head>
 <body>
-    <!--header1-->
+    <!--header2-->
     <header class="hdr2">
         <div>
             <div class="menu">
@@ -132,7 +132,7 @@
    </div>
 
 
-
+<!--footer-->
    <footer>
     <div class="footer-content">
         <h3>GYM 350</h3>
@@ -148,6 +148,7 @@
        </div>
    </footer>
 
+    <!--link bootsrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 
     
