--- a/gym350hml/planes.html
+++ b/gym350hml/planes.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--meta-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="gimnasio 350,gimnasion top,todo tipo de zonas">
+    meta name="keywords" content="gimnasio,ejercicio,maquinas 350">
+    <!--bootsrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--links-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    
+    <!--css-->
+<link rel="stylesheet" href="../css/style.css">
+    <title>Gym 350</title>
 </head>
 <body>
+    <!--header2-->
     <header class="hdr2">
         <div>
             <div class="menu">
@@ -87,7 +95,7 @@
 <!--precios-->
 
 
-
+<--!footer-->
 <footer>
   <div class="footer-content">
       <h3>GYM 350</h3>
@@ -103,6 +111,7 @@
      </div>
  </footer>
 
+    <--!links bootsrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 
     
