--- a/gym350hml/clases.html
+++ b/gym350hml/clases.html
@@ -83,7 +83,7 @@
 
        </div>
           
-<!--clases extras>
+<!--clases extras-->
        <div class="adicionales">
         <h2>
             Extras
