--- a/gym350hml/clases.html
+++ b/gym350hml/clases.html
@@ -13,7 +13,7 @@
     <!--css-->
     <link rel="stylesheet" href="../css/style.css">
     
-    </!--titulo del sitio-->
+    <!--titulo del sitio-->
     <title>Gym350</title>
 
     </head>
