--- a/gym350hml/planes.html
+++ b/gym350hml/planes.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="gimnasio 350,gimnasion top,todo tipo de zonas">
-    meta name="keywords" content="gimnasio,ejercicio,maquinas 350">
+    <meta name="keywords" content="gimnasio,ejercicio,maquinas 350">
     <!--bootsrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--links-->
@@ -95,7 +95,7 @@
 <!--precios-->
 
 
-<--!footer-->
+<!--footer-->
 <footer>
   <div class="footer-content">
       <h3>GYM 350</h3>
