--- a/gym350hml/sobrenosotros.html
+++ b/gym350hml/sobrenosotros.html
@@ -12,7 +12,7 @@
     <!--css-->
     <link rel="stylesheet" href="../css/style.css">
     <!--titulo del sitio-->
-    <title>Document</title>
+    <title>Gym350</title>
 </head>
 <body>
     <!--header2-->
